--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 contourpy==1.3.0
 cycler==0.12.1
+flake8==7.3.0
 fonttools==4.58.4
 idna==3.10
 importlib_resources==6.5.2
 kiwisolver==1.4.7
 matplotlib==3.9.4
+mccabe==0.7.0
 numpy==2.0.2
 packaging==25.0
 panda==0.3.1
 pillow==11.2.1
+pycodestyle==2.14.0
+pyflakes==3.4.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 requests==2.32.4
